hphp/test/zend/good/ext/dom/tests/DOMCharacterData_insertData_error_001.php
<?php
$document = new DOMDocument;
$root = $document->createElement('root');
$document->appendChild($root);

$cdata = $document->createCDATASection('test');
$root->appendChild($cdata);
$cdata->insertData();
?>
