hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_getIteratorMode_error.php
<?php
$list = new SplDoublyLinkedList();
$list->getIteratorMode(24);
?>